# rose

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
core/: CMakeLists.txt  main.cpp
core/include/: application.hpp  camera.hpp  event.hpp  logger.hpp  main_app.hpp  shader.hpp  window.hpp  window_manager.hpp
core/shaders/: vertex.vert
core/src/: application.cpp  camera.cpp  event.cpp  logger.cpp  main_app.cpp  shader.cpp  texture.cpp  window.cpp  window_manager.cpp
rose/: CMakeLists.txt  main.cpp
rose/include/: alias.hpp  application.hpp  camera.hpp  err.hpp  event.hpp  logger.hpp  mesh.hpp  model.hpp  object.hpp  shader.hpp  texture.hpp  window.hpp
rose/include/rose/: alias.hpp  app.hpp  app_state.hpp  application.hpp  camera.hpp  entities.hpp  err.hpp  glstructs.hpp  gui.hpp  lighting.hpp  logger.hpp  math.hpp  model.hpp  object.hpp  shader.hpp  texture.hpp  window.hpp
rose/include/rose/backends/gl/: backend.hpp  lighting.hpp  render.hpp  shader.hpp  structs.hpp
rose/include/rose/core/: alias.hpp  core.hpp  err.hpp  math.hpp  types.hpp
rose/include/rose/gl/: gl_init.hpp  gl_platform.hpp  init.hpp  platform.hpp  render.hpp  shader.hpp  structs.hpp
rose/shaders/: light.vert  light_object.frag  light_object.fs  light_object.vert  light_object.vs  light_source.frag  light_source.fs  light_source.vs  single_col.frag  single_col.vert  texture.frag  texture.vert  texture_mixed.fs  texture_mixed.vs  vertex.vert
rose/shaders/gl/: bloom.frag  blur.frag  brightness.frag  cubemap.frag  cubemap.vert  depth.frag  depth.vert  gaussian.frag  gbuf.frag  gbuf.vert  hdr.frag  light.frag  light.vert  lighting.frag  lighting.vert  lighting_deferred.frag  lighting_forward.frag  lighting_forward.vert  object.frag  object.vert  out.frag  passthrough.frag  quad.frag  quad.vert  shadow.geom  shadow.vert  skybox.frag  skybox.vert  skybox_reflect.frag  skybox_reflect.vert  ssao.frag  texture.frag
rose/shaders/gl/bloom/: downsample.frag  upsample.frag
rose/shaders/gl/compute/: build_aabb.comp  clustered.comp  clusters_build.comp  clusters_cull.comp  light_cull.comp
rose/shaders/gl/shadow/: dir_shadow.frag  dir_shadow.geom  pt_shadow.frag  shadow.vert
rose/source/: application.cpp  camera.cpp  err.cpp  event.cpp  logger.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp  window.cpp
rose/source/rose/: app.cpp  app_state.cpp  application.cpp  camera.cpp  entities.cpp  err.cpp  glstructs.cpp  gui.cpp  lighting.cpp  logger.cpp  math.cpp  model.cpp  object.cpp  shader.cpp  texture.cpp  window.cpp
rose/source/rose/backends/gl/: backend.cpp  lighting.cpp  render.cpp  shader.cpp  structs.cpp
rose/source/rose/core/: err.cpp  math.cpp  types.cpp
rose/source/rose/gl/: gl.cpp  gl_init.cpp  gl_platform.cpp  init.cpp  platform.cpp  render.cpp  shader.cpp  structs.cpp
